# robot_grasp

./: README.md
box/: grasp_box.py  scene_right_box.xml
catkin_ws/src/allegro_hand_grasp_plugin/: CMakeLists.txt  package.xml  plugin.xml
catkin_ws/src/allegro_hand_grasp_plugin/config/: plugin_config.yaml
catkin_ws/src/allegro_hand_grasp_plugin/include/allegro_hand_grasp_plugin/: allegro_grasp_plugin.h
catkin_ws/src/allegro_hand_grasp_plugin/launch/: grasp_demo.launch
catkin_ws/src/allegro_hand_grasp_plugin/models/: right_hand.xml  scene_right_cylinder.xml
catkin_ws/src/allegro_hand_grasp_plugin/src/: allegro_grasp_plugin.cpp
cylinder/: grasp_cylinder.py  right_hand.xml  scene_right_cylinder.xml
